--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
+<!DOCTYPE html>
+
 <html>
-    <head>
-    <script src="script.js"></script>
+<title>Coursera Activity</title>
+
+<head>
+    
     <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
+</head>
+
+<body>
+    <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
+        Amount <input type="number" id="principal"> <br />
+        Rate <input type="range" id="rate" min="1" max="20" step="0.25">  <span id="sliderValue">d</span><br />
+        No. of Years <input type="number" id="years"> <br />
         Interest : <span id="result"></span><br>
 
         <button onclick="compute()">Compute</button>
-    </body>
+    </div>
+    <script src="script.js"></script>
+</body>
+
 </html>
