--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-<title>Coursera Activity</title>
+<title>Web App – Simple Interest Calculator</title>
 
 <head>
 
@@ -37,7 +37,7 @@
         
         <div class="item hidden">Interest : <span id="result"></span><br></div>
         <footer>
-            &#169; This Calculator belongs to nkal
+            &#169; Everyone Can Get Rich
         </footer>
     </div>
 
